--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,20 @@
 [package]
+edition = "2021"
 name = "zero2prod"
 version = "0.1.0"
-edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "zero2prod"
+path = "src/main.rs"
 
 [dependencies]
+actix-http = "=3.0.0-beta.10"
+actix-web = "=4.0.0-beta.9"
+
+[dev-dependencies]
+actix-rt = "2"
+reqwest = "0.11"
+tokio = "1"
