--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,15 @@ path = "src/main.rs"
 [dependencies]
 actix-http = "=3.0.0-beta.10"
 actix-web = "=4.0.0-beta.9"
+chrono = "0.4.15"
+config = "0.11.0"
+serde = {version = "1", features = ["derive"]}
+uuid = {version = "0.8.1", features = ["v4"]}
+
+[dependencies.sqlx]
+default-features = false
+features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
+version = "0.5.7"
 
 [dev-dependencies]
 actix-rt = "2"
